check-pod.yaml
apiVersion: v1
kind: Pod
metadata:
   name: check-pod
   labels:
      app: share-pod
spec:
   volumes:
   - name: check-volume
     hostPath:
        path: /home/docker/pod-volume
   containers:
   - image: nginx
     name: nginx
     ports:
     - containerPort: 80
     volumeMounts:
     - mountPath: /usr/share/nginx/html
       name: check-volume
