pod-cm.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-cm
spec:
  containers:
  - name: nginx
    image: nginx
