backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-deployment
  template:
    metadata:
      labels:
        app: backend-deployment
    spec:
      containers:
      - name: httpd
        image: httpd 
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: backend-service
spec:
  type: NodePort
  selector:
    app: backend-deployment
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
