service.yaml
apiVersion: v1
kind: Service
metadata:
  name: miservice
  annotations:
    services.beta.kubernetes.io/azure-load-balancer-internal: "true"
  labels:
    run: miservice
spec:
  type: LoadBalancer
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: nginx
