miingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miingress
spec:
  rules:
  - host: "front.myserverabc.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: front-service
            port:
              number: 80

  - host: "backend.myserverabc.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: backend-service
            port:
              number: 80
